# anova-pyspark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/anova/: one_way.py
test/anova/: test_one_way.py
test/resource_dir/: one_way_data.csv
